# 2024-F-GROUP1-Tabby

./: .gitignore  README.md  package-lock.json  requirements.txt
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: backend---bug-report.md  feature-request---problem.md  feature_request.md  frontend---bug-report.md
.github/workflows/: workflow.yml
.history/: .gitignore_20241130184043
Tabby/: .env.example  .eslintrc.js  README.md  app.json  example.env  metro.config.js  package-lock.json  package.json  svg.d.ts  tailwind.config.js  tsconfig.json
Tabby/app/: _layout.tsx  favorites.tsx  index.tsx  testingdb.tsx
Tabby/components/: AddBooksOrMoveBooksToCategoryModal.tsx  AddButtonIcon.tsx  AddCustomBookModal.tsx  AddSearchResultsBooksModal.tsx  AddingRecommendationsModal.tsx  BookCard.tsx  BookPreview.tsx  BookSearchPreview.tsx  CameraButton.tsx  DeleteBooksModal.tsx  FavoriteButtonIcon.tsx  FooterNavBar.tsx  LoadingSpinner.tsx  SettingBar.tsx  TestComponent.tsx
Tabby/constants/: Colors.ts  affirmation-gallery.ts  affirmation-images.ts  meditation-data.ts  (+1 more)
app/: index.ts
backend/: remove_me.txt
frontend/: remove_me.txt
server/: .dockerignore  Dockerfile  Procfile  README.md  pyproject.toml  pytest.ini  requirements.txt  tabby.py
server/logs/: README.txt
server/samples/books_search/: 1-in.txt  1-out.json  2-in.txt  2-out.json  bad1-in.txt  bad1-out.txt  noresults-in.txt  noresults.json
server/scripts/: extract.py  find_text.py  google_book.py  highlight_shelf.py  rotate_image.py  scale_image.py  scan_cover.py  scan_shelf.py
server/tabby_server/: __init__.py  __main__.py  test_routes.py
server/tabby_server/api/: base64_to_image.py  books.py  remove.txt
server/tabby_server/services/: flower_of_algernon_test_40_output  flower_of_algernon_test_output  gcloud_api_generation.py  google_books.py  helper.py  library.py  remove.txt  resource_format.py  tags.py
server/tabby_server/vision/: extraction.py  image_labelling.py  ocr.py  remove.txt  vision_test.py  yolo_test.py
server/tabby_server/vision/example_covers/: test_output
server/tabby_server/vision/example_shelves/: shelf_output  shelf_output.txt
server/tabby_server/vision/example_yolo/: yolo_outputs_here
server/tests/: test_api.py  test_extraction.py  test_google_books.py  test_helper.py  test_ocr.py  test_services.py  test_tags.py  test_yolo.py  yolo_example_output.json
(+78 files in other folders)
