[tool.poetry]
name = "server"
version = "0.1.0"
description = "Server for the Tabby app."
authors = ["Ederic Oytas <edericoytas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
requests = "^2.32.3"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
requests-mock = "^1.12.1"
mypy = "^1.13.0"
tox = "^4.23.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
log_cli = 1
log_file = "logs/pytest.log"
log_file_level = "INFO"
