[tool.poetry]
name = "server"
version = "0.1.0"
description = "Server for the Tabby app."
authors = ["Ederic Oytas <edericoytas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
opencv-contrib-python = "^4.10.0.84"
cyclopts = "^2.9.9"
easyocr = "^1.7.2"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
log_cli = 1
log_file = "logs/pytest.log"
log_file_level = "INFO"
